feat(storefront): product integration
